sandc/test/fixtures/astRegression/shouldFail/productions/ifInlineTypeGuard/MissingElse.sand
pub class MissingElse {
    foo() {
        (
            if let inline a = b() {
                c()
            } else if cond {
                c()
            }
        )
    }
}